# switch-config-collector

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config_collector.py  connect_to_device.py  devices-result.csv  devices.csv  example-local_settings.py  local_settings.py  pyproject.toml  requirements.txt  test.py
src/: ConnectionTester.py  ConnectionTester_no_ping.py  LICENSE  SNMPWalker.py  config_collector no_ping.py  config_collector.py  config_collector_no_ping.py  connect_to_device.py  mongo.py  tac_hits.py
src/rcn/network/discovery/: Device.py  Devices.py  __init__.py  device.py  devices.py  utils.py
